<resources>
    <string name="invitation_action">com.avoscloud.chat.INVITATION_ACTION</string>
    <string name="app_name">一点就医</string>
    <string name="hello_world">Hello world!</string>
    <string name="detail"><u>详情</u></string>
    <string name="action_settings">Settings</string>
    <string name="add_friends_success">发送成功</string>
    <string name="net_error">网络连接错误，请检查</string>
    <string name="dialog_load_content">数据正在加载中,请稍候...</string>
    <string name="dialog_title">提示</string>
    <string name="dialog_delete_friends">确定要删除当前好友?</string>
    <string name="dialog_group_name_message">请输入群名称</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="cancel">取消</string>
    <string name="login_str">登录</string>
    <string name="register_str">注册</string>
    <string name="register_email">请输入您的邮箱</string>
    <string name="register_class">请输入班级验证码(选填)</string>
    <string name="register_phone">请输入手机号码</string>
    <string name="register_phone_error">输入手机号码不正确</string>
    <string name="register_name_error">真实姓名不能为空</string>
    <string name="register_id_error">输入的身份证号码不正确</string>
    <string name="register_name">请输入用户名</string>
    <string name="register_really_name">请输入真实姓名</string>

    <string name="register_password">请输入密码</string>
    <string name="register_again_password">请输入确认密码</string>
    <string name="register_password_defferent">输入密码不同</string>
    <string name="service_result">服务器没有返回结果</string>
    <string name="accounted">这个账号已经存在</string>
    <string name="register_fail">注册失败</string>
    <string name="register_success">注册成功</string>
    <string name="send">发送</string>
    <string name="search_str">搜索</string>
    <string name="hint_search_name">输入您要添加的好友名称</string>
    <string name="add">添加</string>
    <string name="exit">退出登录</string>
    <string name="friends_list">我的好友</string>
    <string name="main_str">信息</string>
    <!-- <string name="main_group_str">言语</string> -->
    <string name="contacts_str">好友</string>
    <string name="me_str">设置</string>
    <string name="explore_str">遇见</string>
    <string name="edu_str">教育机构</string>
    <string name="signature">签名</string>
    <string name="image_icon">头像</string>
    <string name="login_view_password">忘记密码</string>
    <string name="login_view_no_register_title">还没有账号? </string>
    <string name="login_view_no_register"><u>立即注册</u></string>
    <string name="change_password_new">新密码</string>
    <string name="change_passowrd_again">确认密码</string>
    <string name="change_passord_success">修改密码成功</string>
    <string name="changge_password_str">修改密码</string>
    <string name="add_new_friends">新的朋友</string>
    <string name="group_chat">群聊</string>
    <string name="subscribe">接受</string>
    <string name="im_char_str">聊天界面</string>
    <string name="change_password_str">修改密码</string>
    <string name="new_friends_str">新朋友</string>
    <string name="group_str">群聊</string>
    <string name="group_add_str">发起群聊</string>
    <string name="login_check"><t></t>记住账号</string>
    <string name="login_error">账号或者密码错误</string>
    <string name="username">登录名</string>
    <string name="name">昵称</string>
    <string name="adr">地区</string>
    <string name="sex">性别</string>
    <string name="surname">姓名</string>
    <string name="email">邮箱</string>
    <string name="phone">手机</string>
    <string name="change_password">密码</string>
    <string name="pay">钱包</string>
    <string name="role_play">请假</string>
    <string name="no_fill">未填写</string>
    <string name="submit">确定</string>
    <string name="gl_wait">请稍等</string>
    <string name="forfriends">朋友圈</string>
    <string name="foractivities">活动行</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="error_network">搜索失败,请检查网络连接！</string>
    <string name="error_key">key验证无效！</string>
    <string name="error_other">未知错误，请稍后重试!错误码为</string>

    <string name="app_id">输入您讯飞的appid</string>
    <string name="preference_default_tts_role">xiaoyan</string>
    <string name="preference_key_tts_speed">tts_speed</string>
    <string name="preference_title_tts_speed">语速</string>
    <string name="preference_default_tts_speed">50</string>
    <string name="preference_dialog_title_tts_speed">选择语速</string>
    <string name="preference_key_tts_volume">tts_volume</string>
    <string name="preference_title_tts_volume">音量</string>
    <string name="preference_default_tts_volume">50</string>
    <string name="preference_dialog_title_tts_volume">选择音量</string>
    <string name="preference_key_tts_pitch">tts_pitch</string>
    <string name="preference_title_tts_pitch">语调</string>
    <string name="preference_default_tts_pitch">50</string>
    <string name="sending_request">正在发送请求</string>
    <string-array name="aiditem">
        <item>头部</item>
        <item>胸，腹部</item>
        <item>婴幼儿</item>
        <item>四肢</item>
        <item>生殖</item>
    </string-array>
    <string-array name="deparment">
        <item>内科</item>
        <item>外科</item>
        <item>妇产科</item>
        <item>儿科</item>
        <item>感染科</item>
        <item>中医科</item>
        <item>神经内科</item>
        <item>急诊内科</item>
        <item>急诊外科</item>
        <item>肿瘤科</item>
        <item>耳鼻喉-头颈外科</item>
        <item>眼科</item>
        <item>口腔科</item>
        <item>放射科</item>
    </string-array>
    <string-array name="charactersArray">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
    </string-array>
    <string-array name="spinnername">
        <item>小时</item>
        <item>分钟 </item>
        <item>天</item>
    </string-array>

    <string name="send_content_empty">发送内容不能为空</string>
    <string name="delete_friends">移出通讯录</string>
    <string name="sign_empty">签名不能为空</string>
    <string name="friends_str">详情资料</string>
    <string name="search_pop">请输入搜索用户</string>
    <string name="main_imchar_empty">还没有对话内容喔</string>
    <string name="no_friends">没朋友申请</string>
    <string name="search_pop_empty">没搜索结果</string>

    <drawable name="button_normal">#19A4ED</drawable>
    <drawable name="button_pressed">#1088C9</drawable>

    <string name="menu_settings">Settings</string>
    <string name="title_activity_poi_around_search">PoiAroundSearchActivity</string>
    <string name="title_activity_poi_aroundjizhen">PoiAroundjizhenActivity</string>
    <string name="title_activity_poi_aroundyandian">PoiAroundyandianActivity</string>
    <string name="update_service_versionIsAlreadyNew">已经是最新版本了</string>
    <string name="update_service_sureToUpdate">确定更新版本吗</string>
    <string name="update_service_updateLog">更新日志</string>
    <string name="update_service_installNewVersion">安装新版本</string>
    <string name="update_service_laterNotify">稍后提醒</string>
    <string name="update_service_haveNewVersion">版本更新</string>
    <string name="setting_preference_voice">语音</string>
    <string name="update_service_failedToGetData">获取数据失败</string>
    <string name="entry_register_activity_password">密码</string>
    <string name="login">登录</string>
    <string name="conversation_messages">会话</string>
    <string name="contact">联系人</string>
    <string name="profile_settings">Settings</string>
    <string name="profile_title">我</string>
    <string name="discover_title">发现</string>
    <string name="login_username_hint">请输入用户名</string>
    <string name="ensurePasswordHint">请在此输入密码</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="ensurePassword">确认密码 </string>
    <string name="register">注册</string>
    <string name="password_can_not_null">密码不能为空</string>
    <string name="username_cannot_null">用户名不能为空</string>
    <string name="password_not_consistent">输入的两次密码不一致</string>
    <string name="registerSucceed">注册成功</string>
    <string name="registerFailed">注册失败。</string>
    <string name="not_have_account">还没有账号？</string>
    <string name="register_rightnow">立即注册 &gt;</string>
    <string name="discover_metres">米</string>
    <string name="discover_unknown">未知</string>
    <string name="discover_recent_login_time">最近登录时间:</string>
    <string name="contact_account">账号 </string>
    <string name="contact_search">搜索</string>
    <string name="profile_vibrate">震动</string>
    <string name="contact_chat">发起会话</string>
    <string name="contact_add_friend">添加好友</string>
    <string name="contact_new_friends">新朋友</string>
    <string name="contact_deleteFriendRequest">删除好友请求</string>
    <string name="contact_agreed">已同意</string>
    <string name="contact_deleteContact">删除联系人</string>
    <string name="common_sure">确定</string>
    <string name="contact_deleteSucceed">删除成功</string>
    <string name="contact_findFriends">查找好友</string>
    <string name="contact_add">添加</string>
    <string name="contact_sendRequestSucceed">发送请求成功，等待对方验证</string>
    <string name="contact_personalInfo">个人资料</string>
    <string name="contact_detailInfo">详细资料</string>
    <string name="contact_male">男</string>
    <string name="contact_female">女</string>
    <string name="profile_notifySetting">提醒设置</string>
    <string name="profile_notifyWhenNews">接收新消息通知</string>
    <string name="conversation_group">群组</string>
    <string name="conversation_name">群组名称</string>
    <string name="conversation_create">创建</string>
    <string name="conversation_Members">群组成员</string>
    <string name="conversation_inviteSucceed">已发出邀请</string>
    <string name="conversation_inviteMembers">邀请群成员</string>
    <string name="conversation_kickTips">确认要踢走该成员吗</string>
    <string name="conversation_detail_invite">邀请</string>
    <string name="conversation_quitGroup">退群</string>
    <string name="conversation_quit_group_tip">确定要退出该群组？</string>
    <string name="utils_kilometres">公里</string>
    <string name="refreshable_view_pull_to_refresh">下拉可以刷新</string>
    <string name="refreshable_view_release_to_refresh">释放立即刷新</string>
    <string name="refreshable_view_refreshing">正在刷新…</string>
    <string name="profile_fragment_checkUpdate">检查更新</string>
    <string name="discover_fragment_sort">排序</string>
    <string name="discover_fragment_loginTime">登录时间</string>
    <string name="discover_fragment_distance">距离</string>
    <string name="contact_alreadyCreateAddRequest">请求已发送</string>
    <string name="conversation_alreadyQuitConv">已退出群</string>
    <string name="conversation_detail_kickSucceed">已踢走该成员</string>
    <string name="conversation_detail_title">详情</string>
    <string name="chat_location_activity_send">发送</string>
    <string name="chat_getGeoInfoFailed">获取地理位置信息失败!</string>
    <string name="chat_geoIsSame">获取坐标相同</string>
    <string name="chat_location_mapKeyErrorTips">key 验证出错! 请在 AndroidManifest.xml 文件中检查 key 设置</string>
    <string name="chat_reverseGeoCodeResultIs">反编码得到的地址：</string>
    <string name="chat_cannotGetYourAddressInfo">无法获取到您的位置信息！</string>
    <string name="chat_xlistview_footer_hint_normal">查看更多</string>
    <string name="chat_xlistview_footer_hint_ready">松开载入更多</string>
    <string name="push_add_request">您有新的好友申请</string>
    <string name="message_when_agree_request">我们已经是好友了，来聊天吧</string>
    <string name="old_password">请输入旧密码</string>
    <string name="new_password">请输入新密码</string>
    <string name="confirm">确认</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
