<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="@color/title_green"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/titlebar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_green"
        android:orientation="horizontal" >



        <TextView
            android:id="@+id/titleView"
            style="@style/white20Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="修改密码"
            android:gravity="center"
            android:layout_gravity="center" />

        <ImageView
            android:id="@+id/leftBtn"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="center_vertical"
            android:padding="10dp"
            android:src="@mipmap/btn_back" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp"
        >
        <EditText
            android:id="@+id/oldPwdView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@mipmap/input_bg"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:hint="@string/old_password"
            android:paddingLeft="10dp"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/pwdView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@mipmap/input_bg"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:hint="@string/new_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/pwdView1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@mipmap/input_bg"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            >
        </EditText>

        <Button
            android:id="@+id/subBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@mipmap/btn"
            android:text="@string/confirm"
            android:gravity="center"
            android:textColor="@color/white" />

    </LinearLayout>
</LinearLayout>