<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/all_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/title_green"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/title1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_green"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="好友详情"
            android:textColor="#ffffff"
            android:textSize="@dimen/fontSizeMidMM" />

        <ImageView
            android:id="@+id/leftBtn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/fontTitle"
            android:layout_gravity="center_vertical"
            android:padding="10dp"
            android:src="@mipmap/btn_back" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_gray"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/head_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/contact_person_info_about_top_bg"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                style="@style/My.TextView._Black"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/chat_common_avatar" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/avatar_view"
                    style="@style/My.ImageView"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:padding="10dp"
                    android:src="@drawable/chat_default_user_avatar" />

                <ImageView
                    android:id="@+id/avatar_arrow"
                    style="@style/My.ImageView"
                    android:layout_width="20dp"
                    android:contentDescription="@string/profile_settings"
                    android:src="@mipmap/common_view_right_arrow_pic" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/contact_person_info_mid_bg"
            android:padding="10dp">

            <TextView
                style="@style/My.TextView._Black"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/contact_account" />

            <TextView
                android:id="@+id/username_view"
                style="@style/My.TextView._Black"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:drawablePadding="10dp" />
        </RelativeLayout>


        <Button
            android:id="@+id/addFriendBtn"
            style="@style/My.Button.theme"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/contact_add_friend"
            android:visibility="gone" />

        <Button
            android:id="@+id/chatBtn"
            style="@style/My.Button.theme"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="开始聊天" />
    </LinearLayout>
</LinearLayout>